--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pandas
-pymongo
-numpy
-scipy
-scikit-learn
-flask
-gpyopt
+pandas>=0.20.3
+pymongo>=3.5.1
+numpy>=1.8.2
+scipy>=1.0.0
+scikit-learn>=0.19.1
+flask>=0.12.2
+GPyOpt>='1.2.5'
+enum34
